...
                <View
                  style={tw`flex-row items-center justify-between px-4 pb-1 pt-2`}
                >
                  <Text
                    style={tw`font-sans-bold text-[15px] tracking-tight text-slate-300`}
                  >
                    Saved
                  </Text>
                </View>
                {view === 'grid' ? (
                  <View
                    style={tw`flex-row flex-wrap justify-center gap-3 px-4 pb-2`}
                  >
...
